--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>사이트 준비 중</title>
+<title>한번만 클릭 해보세요.</title>
 
 <style>
     body {
@@ -42,7 +42,7 @@
 
 <body>
 <div class="container">
-    <h1>사이트가 곧 공개됩니다....</h1>
+    <h1>???</h1>
 
     <div id="countdown">????</div>
 
